--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,19 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+
+        >
 
     </androidx.viewpager.widget.ViewPager>
 
+
     <com.google.android.material.tabs.TabLayout
     android:id="@+id/tabs"
+
         android:layout_gravity="bottom"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
