--- a/app/src/main/res/layout/fragment_surveylist.xml
+++ b/app/src/main/res/layout/fragment_surveylist.xml
@@ -2,11 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+
+
     tools:context=".ui.main.Surveylist">
 
    <ListView
+       android:paddingBottom="?attr/actionBarSize"
+       android:id="@+id/SurveyListView"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/SurveyListView"></ListView>
+       android:layout_height="wrap_content" />
 </FrameLayout>
