--- a/app/src/main/res/layout/fragment_user_answer.xml
+++ b/app/src/main/res/layout/fragment_user_answer.xml
@@ -14,26 +14,26 @@
     android:orientation="vertical"
     android:padding="20dp"
    >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/my_linear_layout"
 
-        android:orientation="vertical"
-        ></LinearLayout>
+        android:orientation="vertical" />
 
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true">
-    <Button
+            android:layout_height="match_parent">
+
+            <Button
 
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save All"
-        android:id="@+id/Answersave"
-        android:layout_marginBottom="60dp"></Button>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/save_all"
+                android:id="@+id/Answersave"
+                android:layout_marginBottom="60dp" />
     </RelativeLayout></LinearLayout>
 </ScrollView>
