--- a/app/src/main/res/layout/classicq.xml
+++ b/app/src/main/res/layout/classicq.xml
@@ -11,12 +11,15 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         />
+<com.google.android.material.textfield.TextInputLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-  <EditText
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/classicAnswer"
-      android:hint="Write your answer"
-      android:textSize="15dp"></EditText>
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/classicAnswer"
+        android:hint="@string/write_your_answer" />
+</com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
