--- a/app/src/main/res/layout/fragment_classic_answer.xml
+++ b/app/src/main/res/layout/fragment_classic_answer.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".ui.main.ClassicAnswer">
-<LinearLayout
+    <TextView
+    android:id="@+id/classicAnswerQuestion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:text="@string/hello_blank_fragment"
+    />
 
-    <TextView
-        android:id="@+id/classicAnswerQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="20dp"/>
+
 
     <ListView
         android:id="@+id/clasiclistview"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        ></ListView>
+        android:layout_height="wrap_content"
+        android:smoothScrollbar="true"/>
 
 </LinearLayout>
-</androidx.core.widget.NestedScrollView>
