--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MakeSurvey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    ac<style name="Theme.MakeSurvey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-
+        <item name="android:actionMenuTextColor">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -13,14 +13,43 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+    <item name="materialButtonStyle">@style/myCustomContainedButton</item>
+
+    <!--this item is invoked in app theme to override the outlined material button-->
+
+</style>
+
+
+    <!--parent name is to be give carefully-->
+    <style name="myCustomContainedButton" parent="Widget.MaterialComponents.Button">
+        <!--these all styles are implemented outside, because to get all the overridden attributes easily-->
+        <item name="shapeAppearance">@style/customContainedButtonTheme</item>
+        <item name="android:textAppearance">@style/myCustomTextForMaterialButtons</item>
+    </style>
+    <!--overriding cornerSize and cornerFamily of the contained button-->
+    <style name="customContainedButtonTheme">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">24dp</item>
+    </style>
+   
+    <style name="myCustomTextForMaterialButtons">
+        <item name="fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
-    <style name="Theme.MakeSurvey.NoActionBar">
-        <item name="windowActionBar">true</item>
-        <item name="windowNoTitle">true</item>
+
+
+
+    <style name="Theme.MakeSurvey.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <item name="android:actionMenuTextColor">@color/black</item>
+
+       
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+
+
     </style>
 
-    <style name="Theme.MakeSurvey.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.MakeSurvey.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.MakeSurvey.PopupOverlay" parent="ThemeOverlay.AppCompat" />
 </resources>
