--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,8 @@
         app:helperTextEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
-        app:layout_constraintVertical_bias="0.13999999">
+        app:layout_constraintVertical_bias="0.13999999"
+        android:layout_margin="10sp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loginUserEmailAddress"
@@ -45,7 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/LoginMailLayout"
-        app:passwordToggleEnabled="true">
+        app:passwordToggleEnabled="true"
+        android:layout_margin="10sp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/LoginUserPassword"
