--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,27 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".Auth.MainPage"
     android:padding="30dp">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/app_name"
-        android:textSize="40dp"></TextView>
+        android:textSize="40sp"
+        android:textColor="@color/white"/>
+
     <Button
         android:id="@+id/Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="20dp"
-         android:layout_above="@+id/Register"
-        android:layout_marginBottom="20dp"></Button>
+        android:text="@string/login"
+        android:textSize="20sp"
+        android:layout_above="@+id/Register"
+        android:layout_marginBottom="20dp" />
+
     <Button
         android:id="@+id/Register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="@string/register"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:textSize="20dp"
-        android:layout_marginBottom="30dp"></Button>
+        android:textSize="20sp"
+        android:layout_marginBottom="30dp" />
 
 </RelativeLayout>
