--- a/app/src/main/res/layout/survey.xml
+++ b/app/src/main/res/layout/survey.xml
@@ -12,7 +12,7 @@
             android:id="@+id/surveyname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_margin="5dp" />
 
         <TextView
@@ -25,28 +25,28 @@
      android:layout_height="wrap_content"
      android:orientation="horizontal"
 
-     android:paddingLeft="30dp">
+     android:paddingStart="30dp">
 
      <Button
          android:id="@+id/ResultButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="Result"
+         android:text="@string/result"
          android:textSize="12sp" />
 
      <Button
          android:id="@+id/listdelete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="Delete"
+         android:text="@string/delete"
          android:textSize="12sp"
-         android:layout_marginLeft="10dp"/>
+         android:layout_marginStart="10dp"/>
      <Button
      android:id="@+id/listpublishlink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     android:text="Publish Link"
-         android:layout_marginLeft="10dp"
+     android:text="@string/publish_link"
+         android:layout_marginStart="10dp"
      android:textSize="12sp" />
  </LinearLayout>
 
