--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,35 +5,40 @@
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="android:actionMenuTextColor">@color/black</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-
+<item name="android:textColor">#3C2A30</item>
         <!-- Customize your theme here. -->
-    <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+    <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox</item>
     <item name="materialButtonStyle">@style/myCustomContainedButton</item>
 
     <!--this item is invoked in app theme to override the outlined material button-->
-
+    <item name="android:windowBackground">@drawable/back</item>
 </style>
 
 
     <!--parent name is to be give carefully-->
     <style name="myCustomContainedButton" parent="Widget.MaterialComponents.Button">
         <!--these all styles are implemented outside, because to get all the overridden attributes easily-->
+<item name="materialThemeOverlay">@style/ThemeOverlay.App.Button.TextButton</item>
         <item name="shapeAppearance">@style/customContainedButtonTheme</item>
         <item name="android:textAppearance">@style/myCustomTextForMaterialButtons</item>
     </style>
     <!--overriding cornerSize and cornerFamily of the contained button-->
     <style name="customContainedButtonTheme">
+
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">24dp</item>
     </style>
-   
+    <style name="ThemeOverlay.App.Button.TextButton" parent="">
+        <item name="colorPrimary">#0525E8</item>
+    </style>
     <style name="myCustomTextForMaterialButtons">
+
         <item name="fontFamily">sans-serif-condensed-medium</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">sans-serif</item>
@@ -46,7 +51,7 @@
         <item name="android:actionMenuTextColor">@color/black</item>
 
        
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/black</item>
 
 
     </style>
