--- a/app/src/main/res/layout/fragment_classic_answer.xml
+++ b/app/src/main/res/layout/fragment_classic_answer.xml
@@ -19,6 +19,7 @@
         android:id="@+id/clasiclistview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:smoothScrollbar="true"/>
+        android:smoothScrollbar="true"
+        android:fadeScrollbars="false"/>
 
 </LinearLayout>
