--- a/app/src/main/res/layout-v26/popup_window.xml
+++ b/app/src/main/res/layout-v26/popup_window.xml
@@ -10,7 +10,7 @@
     android:id="@+id/SurveyNameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:helperText="Maximum character is 30"> <EditText
+    app:helperText="Maximum 10 character"> <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/survey_name"
@@ -22,7 +22,7 @@
 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:helperText="Maximum character is 20"
+    app:helperText="Maximum 10 character  "
     android:id="@+id/SurveyDescriptionLayout">
 
     <com.google.android.material.textfield.TextInputEditText
@@ -35,23 +35,15 @@
         android:hint="@string/survey_description"/></com.google.android.material.textfield.TextInputLayout>
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lifetime_for_survey" />
+    
     <Spinner
-
-    android:id="@+id/SurveyDateSpinner"
-    android:layout_width="match_parent"
-    android:textAlignment="center"
-
-    android:layout_height="wrap_content"
-    android:spinnerMode="dialog" /></LinearLayout>
-
+        android:tooltipText="Survey's lifetime"
+        android:id="@+id/SurveyDateSpinner"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog" />
 
     <Button
         android:id="@+id/save"
