--- a/app/src/main/res/layout/fragment_make_survey.xml
+++ b/app/src/main/res/layout/fragment_make_survey.xml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.MakeSurvey"
     android:id="@+id/addsurveya"
-    >
+    android:layout_marginBottom="?attr/actionBarSize">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addsurvey"
-        android:orientation="vertical" />
-   <LinearLayout
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:orientation="horizontal">
-
-       <Button
-        android:id="@+id/button1"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="@string/add_a_questions"
-        android:layout_gravity="end"
-        android:layout_margin="25dp"
-           android:layout_weight="1"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
 
-        />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="59dp"
+        android:contentDescription="@string/save_all"
+        android:src="@drawable/ic_baseline_done_24" />
 
-       <Button
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="@string/save_all"
-           android:id="@+id/buttonSave"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonSave"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="16dp"
 
-           android:layout_weight="1" />
-   </LinearLayout>
-</LinearLayout>
+
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="13dp"
+        android:contentDescription="@string/add_survey_question"
+        android:src="@drawable/ic_baseline_add_24" />
+
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+        android:paddingBottom="?attr/actionBarSize">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/addsurvey"
+            android:orientation="vertical"
+            />
 
 
-</ScrollView>
+
+
+    </ScrollView>
+
+
+</RelativeLayout>
