--- a/app/src/main/res/layout/survey.xml
+++ b/app/src/main/res/layout/survey.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -13,13 +13,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:text="@string/survey_name"
             android:layout_margin="5dp" />
 
         <TextView
             android:id="@+id/number"
+            android:text="@string/survey_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp" /></LinearLayout>
+    android:layout_centerInParent="true"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/Surveycreatedtimeforcreator"
+            android:text="yyyy/mm/dd"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
