--- a/app/src/main/res/layout/survey.xml
+++ b/app/src/main/res/layout/survey.xml
@@ -8,6 +8,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <TextView
             android:id="@+id/surveyname"
             android:layout_width="wrap_content"
@@ -21,8 +25,10 @@
             android:text="@string/survey_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
+
+
             android:layout_margin="5dp" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
