--- a/app/src/main/res/layout/survey2.xml
+++ b/app/src/main/res/layout/survey2.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
    >
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/surveyname2"
         android:layout_width="wrap_content"
@@ -18,8 +22,9 @@
    android:text="@string/survey_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         android:layout_centerInParent="true"/>
-
+        android:layout_margin="5dp"
+       />
+    </LinearLayout>
     <TextView
         android:id="@+id/dateforanswers"
         android:layout_width="wrap_content"
