--- a/app/src/main/res/menu/menumain.xml
+++ b/app/src/main/res/menu/menumain.xml
@@ -6,21 +6,14 @@
     android:title="@string/log_out"
     android:orderInCategory="100"
     android:textColor="@color/black"
-
-
-
     >
-
-
 </item>
     <item
         android:id="@+id/mainuser"
-        android:title="User Setting"
+        android:title="@string/user_setting"
         android:orderInCategory="100"
         android:textColor="@color/black"
-
+        
        >
-
-
     </item>
 </menu>
