--- a/app/src/main/res/layout/fragment_classic_answer.xml
+++ b/app/src/main/res/layout/fragment_classic_answer.xml
@@ -18,7 +18,7 @@
     <ListView
         android:id="@+id/clasiclistview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100sp"
         android:smoothScrollbar="true"
         android:fadeScrollbars="false"/>
 
