--- a/app/src/main/res/layout/fragment_surveylist.xml
+++ b/app/src/main/res/layout/fragment_surveylist.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
 
 
     tools:context=".ui.main.Surveylist">
@@ -11,5 +11,5 @@
        android:paddingBottom="?attr/actionBarSize"
        android:id="@+id/SurveyListView"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content" />
+       android:layout_height="match_parent" />
 </FrameLayout>
