--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,20 +11,21 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-<item name="android:textColor">#3C2A30</item>
+        <item name="android:textColor">#3C2A30</item>
         <!-- Customize your theme here. -->
-    <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox</item>
-    <item name="materialButtonStyle">@style/myCustomContainedButton</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox
+        </item>
+        <item name="materialButtonStyle">@style/myCustomContainedButton</item>
 
-    <!--this item is invoked in app theme to override the outlined material button-->
-    <item name="android:windowBackground">@drawable/back</item>
-</style>
+        <!--this item is invoked in app theme to override the outlined material button-->
+        <item name="android:windowBackground">@drawable/back</item>
+    </style>
 
 
     <!--parent name is to be give carefully-->
     <style name="myCustomContainedButton" parent="Widget.MaterialComponents.Button">
         <!--these all styles are implemented outside, because to get all the overridden attributes easily-->
-<item name="materialThemeOverlay">@style/ThemeOverlay.App.Button.TextButton</item>
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button.TextButton</item>
         <item name="shapeAppearance">@style/customContainedButtonTheme</item>
         <item name="android:textAppearance">@style/myCustomTextForMaterialButtons</item>
     </style>
@@ -34,9 +35,11 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">24dp</item>
     </style>
+
     <style name="ThemeOverlay.App.Button.TextButton" parent="">
         <item name="colorPrimary">#0525E8</item>
     </style>
+
     <style name="myCustomTextForMaterialButtons">
 
         <item name="fontFamily">sans-serif-condensed-medium</item>
@@ -45,16 +48,19 @@
     </style>
 
 
-
-
-    <style name="Theme.MakeSurvey.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+    <style name="Theme.MakeSurvey.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:actionMenuTextColor">@color/black</item>
 
-       
+
         <item name="android:textColor">@color/black</item>
 
 
     </style>
 
     <style name="Theme.MakeSurvey.PopupOverlay" parent="ThemeOverlay.AppCompat" />
+
+    <style name="Theme.MakeSurvey.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
