--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -50,9 +50,26 @@
     android:textAlignment="center"
 
     android:layout_height="wrap_content"
-    android:spinnerMode="dialog" /></LinearLayout>
+    android:spinnerMode="dialog" />
 
 
+
+
+</LinearLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:id="@+id/AgegroupLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+
+            android:id="@+id/AgegroupText"
+            android:hint="@string/target_ages"/></com.google.android.material.textfield.TextInputLayout>
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
