--- a/app/src/main/res/layout/survey.xml
+++ b/app/src/main/res/layout/survey.xml
@@ -19,7 +19,14 @@
             android:textSize="20sp"
             android:text="@string/survey_name"
             android:layout_margin="5dp" />
+            <TextView
+                android:id="@+id/Googlelink"
+                android:text="@string/survey_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
+android:visibility="gone"
+                android:layout_margin="5dp" />
         <TextView
             android:id="@+id/number"
             android:text="@string/survey_description"
